--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/Voucher/CreateVC.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/Voucher/CreateVC.cshtml
@@ -111,12 +111,11 @@
                     </div>
                 </div>
             </div>
+            <div class="text-center mt-3">
+                <a asp-action="AllVoucherManager" class="btn btn-secondary">Quay Lại</a>
+            </div>
         </div>
     </div>
-</div>
-
-<div class="col-md-6">
-    <a asp-action="AllVoucherManager" class="btn btn-secondary">Quay Lại</a>
 </div>
 
 @section Scripts {
