--- a/HN120_ShopQuanAo.View/Areas/Employee/Views/UserManagerEmployee/Update.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Employee/Views/UserManagerEmployee/Update.cshtml
@@ -1,4 +1,5 @@
 ﻿@using HN120_ShopQuanAo.Data.Models;
+@using HN120_ShopQuanAo.Data.Models;
 @model HN120_ShopQuanAo.Data.Models.User
 @{
     ViewData["Title"] = "Update";
@@ -115,7 +116,6 @@
                             <!-- Form Group (birthday)-->
                             <div class="col-md-6">
                                 <label class="small mb-1" for="inputBirthday">Birthday</label>
-
                                 <input asp-for="Birthday" class="form-control" id="inputBirthday" type="date" name="Birthday" placeholder="Enter your birthday" value="@Model.Birthday">
                             </div>
                         </div>
