--- a/HN120_ShopQuanAo.View/Areas/Employee/Views/HoaDonEmployee/GetAllHoaDon_partialView.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Employee/Views/HoaDonEmployee/GetAllHoaDon_partialView.cshtml
@@ -9,10 +9,15 @@
     IEnumerable<ThanhToan> lstt = ViewBag.lstt as IEnumerable<ThanhToan>;
  
 }
-<div style="height: 600px; overflow-y: auto;" >
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" integrity="sha512-b2QcS5SsA8tZodcDtGRELiGv5SaKSk1vDHDaQRda0htPYWZ6046lr3kJ5bAAQdpV2mmA/4v0wQF9MyU6/pDIAg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.min.js" integrity="sha512-WW8/jxkELe2CAiE4LvQfwm1rajOS8PHasCCx+knHG0gBHt8EXxS6T6tJRTGuDQVnluuAvMxWF4j8SNFDKceLFg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+<div style="height: 600px; overflow-y: auto;" id="kkk" >
 
 
-    <table class="table" id="page">
+    <table class="table tbsp" id="page">
         <thead>
             <tr>
 
@@ -51,10 +56,10 @@
 
             </tr>
         </thead>
-        <tbody>
+        <tbody class="data-table">
             @foreach (var item in Model)
             {
-                <tr>
+                <tr data-status="@item.TrangThai">
 
                     <td style="text-align : center; margin-bottom : 20px">
                         @item.MaHoaDon
@@ -86,10 +91,10 @@
                     <td style="text-align : center; margin-bottom : 20px">
                         @item.SoDienThoai
                     </td>
-                    <td style="text-align : center; margin-bottom : 20px">
+                    <td style="text-align : center; margin-bottom : 20px" class="money">
                         @item.PhiShip
                     </td>
-                    <td style="text-align : center; margin-bottom : 20px">
+                    <td style="text-align : center; margin-bottom : 20px" class="money">
                         @item.TongGiaTriHangHoa 
                     </td>
                     <td style="text-align : center; margin-bottom : 20px">
@@ -104,7 +109,7 @@
                         }
                         @if (item.PhuongThucThanhToan == 3)
                         {
-                            <p>Thập cẩm</p>
+                            <p>Chuyển khoản + tiền mặt</p>
                         }
                         @if (item.PhuongThucThanhToan == 4)
                         {
@@ -158,4 +163,5 @@
             }
         </tbody>
     </table>
+
 </div>
