--- a/HN120_ShopQuanAo.View/Areas/Employee/Views/Shared/_LayoutEmployee.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Employee/Views/Shared/_LayoutEmployee.cshtml
@@ -31,41 +31,41 @@
                 <nav class="sidebar-nav scroll-sidebar" data-simplebar="">
                     <ul id="sidebarnav">
                         <li class="sidebar-item">
-                            <a class="sidebar-link" aria-expanded="false" asp-area="Employee" asp-controller="UserManagerEmployee" asp-action="GetAllAccount">
+                            <a class="sidebar-link has-arrow" href="javascript:void(0)" aria-expanded="false">
                                 <span>
                                     <i class="bi bi-person-gear"></i>
                                 </span>
                                 <span class="hide-menu">Quản lý tài khoản</span>
                             </a>
-                        </li>                     
+                            <ul aria-expanded="false" class="collapse first-level">
+                                <li class="sidebar-item">
+                                    <a class="sidebar-link" asp-area="Employee" asp-controller="UserManagerEmployee" asp-action="GetAllUser">
+                                        <span>
+                                            <i class="bi bi-people"></i>
+                                        </span>
+                                        <span class="hide-menu">Quản lý người dùng</span>
+                                    </a>
+                                </li>
+
+                            </ul>
+                        </li>
                         <li class="nav-small-cap">
-                            <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
+                            <i class="bi bi-cash"></i>
                             <a class="sidebar-link" href="/Employee/HoaDonEmployee/BanHangTaiQuayView">
-                                <span>
-                                    <i class="ti ti-typography"></i>
-                                </span>
                                 <span class="hide-menu">Bán hàng tại quầy</span>
                             </a>
                         </li>
                         <li class="nav-small-cap">
-                            <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
+                            <i class="bi bi-receipt"></i>
                             <span class="hide-menu">Quản lý hóa đơn</span>
                         </li>
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="/Employee/HoaDonEmployee/GetAllHoaDon">
-
-                                <span>
-                                    <i class="ti ti-typography"></i>
-                                </span>
+                            <a class="sidebar-link" href="/Employee/HoaDonEmployee/QuanLyHoaDon">
                                 <span class="hide-menu">Danh sách hóa đơn</span>
                             </a>
-
                         </li>
-@*                         <li class="sidebar-item">
+           @*              <li class="sidebar-item">
                             <a class="sidebar-link" href="./authentication-register.html" aria-expanded="false">
-                                <span>
-                                    <i class="ti ti-user-plus"></i>
-                                </span>
                                 <span class="hide-menu">Lịch sử hóa đơn</span>
                             </a>
                         </li> *@
