--- a/HN120_ShopQuanAo.View/Views/Home/Index.cshtml
+++ b/HN120_ShopQuanAo.View/Views/Home/Index.cshtml
@@ -22,10 +22,10 @@
             <!--sidebar banner-->
             <div class="sidebar_widget banner mb-35">
                 <div class="banner_img mb-35">
-                    <a href="#"><img src="/img/banner/banner5.jpg" alt=""></a>
+                    <a href="#"><img src="/img/banner/bannerHomLander1.jpg" alt=""></a>
                 </div>
                 <div class="banner_img">
-                    <a href="#"><img src="/img/banner/banner6.jpg" alt=""></a>
+                    <a href="#"><img src="/img/banner/BannerATrain3.jpg" alt=""></a>
                 </div>
             </div>
             <!--sidebar banner end-->
@@ -205,7 +205,7 @@
             <!--banner slider start-->
             <div class="banner_slider slider_1">
                 <div class="slider_active owl-carousel">
-                    <div class="single_slider" style="background-image: url(/img/slider/slide_1.png)">
+                    <div class="single_slider" style="background-image: url(/img/slider/slideHomeLander3.png)">
                         <div class="slider_content">
                             <div class="slider_content_inner">
                                 <h1>Men's Fashion</h1>
@@ -214,20 +214,23 @@
                             </div>
                         </div>
                     </div>
-                    <div class="single_slider" style="background-image: url(/img/slider/slider_2.png)">
+                    <div class="single_slider" style="background-image: url(/img/slider/slideHomelander2.png)">
                         <div class="slider_content">
                             <div class="slider_content_inner">
-                                <h1>New Collection</h1>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+                                <h1>Dẫn Đầu Xu Hướng</h1>
+                                <p>Thời trang đẳng cấp cho phái mạnh</p>
+
+
                                 <a href="#">shop now</a>
                             </div>
                         </div>
                     </div>
-                    <div class="single_slider" style="background-image: url(/img/slider/slider_3.png)">
+                    <div class="single_slider" style="background-image: url(/img/slider/slideHomelander1.png)">
                         <div class="slider_content">
                             <div class="slider_content_inner">
-                                <h1>Best Collection</h1>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+                                <h1>Top 1</h1>
+                                <p>Trang phục tinh tế cho nam giới</p>
+
                                 <a href="#">shop now</a>
                             </div>
                         </div>
